infra.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce

---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: ecommerce
spec:
  ports:
    - port: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper:3.8
          ports:
            - containerPort: 2181

---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: ecommerce
spec:
  ports:
    - port: 9092
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:3.7
          ports:
            - containerPort: 9092
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
spec:
  ingressClassName: kong
  rules:
    - host: "pe-back.com"
      http:
        paths:
          - path: "/saga/api/v1/orders"
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-orders-svc
                port:
                  number: 80
          - path: "/saga/api/v1/inventory"
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-inventory-svc
                port:
                  number: 80
          - path: "/saga/api/v1/invoices"
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-billing-svc
                port:
                  number: 80
